--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,11 +271,25 @@ footer {
   .about-card {
     flex-direction: column;
     text-align: center;
+    align-items: center;
   }
 
   .about-photo {
-    width: 150px;
-    height: 150px;
+    width: 140px;
+    height: 140px;
+    margin-bottom: 15px;
+  }
+
+  .about-text {
+    text-align: center;
+    padding: 0;         
+    margin: 0 auto;      
+    max-width: 90%;      
+  }
+
+  .about-text p {
+    text-align: center;
   }
 }
+
 
